--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,46 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: Helvetica;
+  text-transform: uppercase;
+}
+
+.gameplay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  align-items: center;
+  margin-top: 20vh;
+}
+.table h1 {
+  background-color: #6ca965;
+  color: whitesmoke;
+  padding: 10px 15px;
+  border-radius: 8px;
+}
+
+.row {
+  display: flex;
+  gap: 3px;
+}
+
+.tile {
+  width: 50px;
+  height: 50px;
+  border: 0.5px solid lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.2rem;
+  font-weight: 700;
+}
