--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,89 @@ body {
   font-size: 2.2rem;
   font-weight: 700;
 }
+
+.correct {
+  color: white;
+  background-color: #6ca965;
+}
+.available {
+  color: white;
+  background-color: #c8b653;
+}
+
+.filled {
+  color: white;
+  background-color: #787c7f;
+}
+
+.error {
+  color: white;
+  background-color: lightcoral;
+  padding: 10px 15px;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  gap: 3px;
+}
+.side {
+  background-color: #eee;
+  padding: 20px 25px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: end;
+  flex-wrap: wrap;
+  max-width: 20vw;
+  /* flex-grow: 1; */
+  gap: 3px;
+}
+
+.letter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 0.5px solid lightgray;
+  background-color: #787c7f;
+  color: white;
+}
+
+.letterBoard {
+  display: flex;
+  gap: 2px;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 20%;
+}
+.letterBox {
+  display: flex;
+  width: 20px;
+  height: 30px;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.free {
+  background-color: #ddd;
+}
+
+.wrongGuessed {
+  background-color: #787c7f;
+  color: white;
+}
+
+.closeGuessed {
+  color: white;
+  background-color: #c8b653;
+}
+
+.correctlyGuessed {
+  color: white;
+  background-color: #6ca965;
+}
